...
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            style="@style/NoCitySelected.Title"
            android:text="@string/no_city_selected_title" />

        <TextView
            style="@style/NoCitySelected.StatusDesc"
            android:text="@string/no_city_selected_status_desc" />

        <Button
            android:id="@+id/no_city_selected_select_zone"
            style="@style/NoCitySelected.SelectZone"
            android:text="@string/no_city_selected_select_zone" />

    </LinearLayout>
</ScrollView>

