...
        by the cities. Zone data is updated manually and highly depends on the
        feedback of friendly users like you.
        For these reasons we do not guarantee for a perfect visualization and
        we are not liable for costs or punishments. We strongly suggest to always
        rely on the road sign in the particular cities.
    </string>
    <string name="appinfo_references_name_umweltbundesamt">Federal Environment Agency</string>
    <string name="appinfo_references_url_umweltbundesamt" translatable="false">
        https://www.umweltbundesamt.de
    </string>

    <!-- AboutActivity / Graphics -->
    <string name="appinfo_references_graphics_title">Graphics</string>
    <string name="appinfo_references_graphics_content">
        Graphics such as the logo and stickers are taken from Wikimedia Commons.
    </string>
    <string name="appinfo_references_name_wikimedia_commons" translatable="false">
        Wikimedia Commons
    </string>
    <string name="appinfo_references_url_wikimedia_commons" translatable="false">
        https://commons.wikimedia.org
    </string>

...

    <!-- AboutActivity / Libraries -->
    <string name="appinfo_references_libraries_title">Libraries</string>
    <string name="appinfo_references_libraries_content">
        The following software libraries are used within the application.
    </string>
    <string name="appinfo_view_libraries_button">View libraries</string>

    <!-- AboutActivity / Sourcecode -->
    <string name="appinfo_sourcecode_title">Source code</string>
    <string name="appinfo_sourcecode_content">
        The source code of the application is available online.
    </string>
    <string name="appinfo_sourcecode_url_title">Application source code</string>
    <string name="appinfo_sourcecode_url" translatable="false">
        https://github.com/Umweltzone/Umweltzone
    </string>

    <!-- AboutActivity / License -->
    <string name="appinfo_license_title">Licenses</string>
...
        The source code of the Umweltzone application is licensed under the GPLv3 Licence.
        The geometry coordinates taken from OpenStreetMap are licensed under the
        Open Database Licence (ODbL) v1.0. Other geometry coordinates are licensed as
        defined by the mentioned data sources. Images and texts are licensed under
        the Creative Commons Attribution 3.0 Unported License.
    </string>
    <string name="appinfo_license_url_title_gpl">GPLv3 License</string>
    <string name="appinfo_license_url_gpl" translatable="false">
        https://www.gnu.org/licenses/gpl-3.0.txt
    </string>
    <string name="appinfo_license_url_title_odbl" translatable="false">
        Open Database Licence
    </string>
    <string name="appinfo_license_url_odbl" translatable="false">
        https://opendatacommons.org/licenses/odbl/1-0
    </string>
    <string name="appinfo_license_url_title_creative_commons">
        Creative Commons License
    </string>
    <string name="appinfo_license_url_creative_commons" translatable="false">
        https://creativecommons.org/licenses/by/3.0/deed
    </string>

...
