<?xml version="1.0" encoding="utf-8"?><!--
  Copyright (C) 2015  Tobias Preuss

  This program is free software: you can redistribute it and/or modify
  it under the terms of the GNU General Public License as published by
  the Free Software Foundation, either version 3 of the License, or
  (at your option) any later version.

  This program is distributed in the hope that it will be useful,
  but WITHOUT ANY WARRANTY; without even the implied warranty of
  MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  GNU General Public License for more details.

  You should have received a copy of the GNU General Public License
  along with this program.  If not, see <http://www.gnu.org/licenses/>.
  -->

<merge xmlns:android="http://schemas.android.com/apk/res/android">

    <TextView
        style="@style/AppInfo.ContentTitle"
        android:text="@string/appinfo_license_title" />

    <TextView
        style="@style/AppInfo.TextContent"
        android:text="@string/appinfo_license_content" />

    <TextView
        android:id="@+id/app_info_gpl"
        style="@style/AppInfo.WebLink"
        android:text="@string/appinfo_license_url_gpl" />

    <TextView
        android:id="@+id/app_info_odbl"
        style="@style/AppInfo.WebLink"
        android:text="@string/appinfo_license_url_odbl" />

    <TextView
        android:id="@+id/app_info_creative_commons"
        style="@style/AppInfo.WebLink"
        android:text="@string/appinfo_license_url_creative_commons" />

</merge>
